--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@ html, body {
 }
 body {
     font-family: ubuntu, 'sans-serif';
-    color: rgb(205, 209, 223);
+    color: rgb(223, 209, 205);
     height: 100vh;
     width: 100vw;
+    font-size: 30px;
 }
 
 header{
     height: 10vh;
-    background: rgb(238, 37, 2);
+    background: rgb(204, 44, 16);
 }
 
 h1 {
@@ -52,7 +53,7 @@ main > article > section:nth-of-type(4) {
 }
 
 ul {
-    width: 5vw;
+    width: 15vw;
     list-style-type: none;
     display: flex;
     flex-direction: column;
@@ -66,27 +67,56 @@ ul > li {
     align-items: center;
 }
 
+ul > li > input {
+    text-indent: 0.3rem;
+    background: rgb(231, 231, 231);
+    
+}
+
 input, button {
-    border-radius: 0px;
-    box-shadow: none;
-    border: 0.1px solid black;
+    border: 0.1px solid rgb(44, 42, 42);
+    font-size: 20px;
+    margin: 0;
+}
+/* firefox */
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+/* chrome, safari, edge */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 ul > li, ul > li > input, section > input, button{
-    height: 1.8rem;
-    width: 3rem;
-}
-
-section > button {
-    height: 2rem;
+    height: 3rem;
     width: 7rem;
 }
 
 section > input {
-    color: white;
-    text-indent: 0.3rem;
-    height: 2rem;
-    width: 5rem;
+    color: rgb(235, 224, 221);
+    text-indent: 0.5rem;
+    background: rgb(39, 37, 37);
+    border-radius: 3px;
+    border: none;
+    padding: 0;
+    outline: none;
+}
+
+button {
+    height: 2.9rem;
+    width: 6.9rem;
+    border-radius: 3px;
+    background: rgb(231, 231, 231);
+}
+button:hover {
+    transition: 0.1s;
+    transform: scale(1.02);
+    background: white;
+    
+    
+    
 }
 
 
